# TX_Complete

./: gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/tx/core/: cell.h  types.h
app/src/main/cpp/tx_core/: engine.cpp  engine.h  jni_bridge.cpp  parser.cpp  parser.h  pty.cpp  pty.h  renderer.cpp  renderer.h  screen.cpp  screen.h
app/src/main/java/com/tx/terminal/: MainActivity.kt  TXApplication.kt  TerminalService.kt
app/src/main/java/com/tx/terminal/bridge/: JNIInterface.kt  SessionConnector.kt
app/src/main/java/com/tx/terminal/data/: SessionRepository.kt  TerminalBuffer.kt  TerminalSession.kt
app/src/main/java/com/tx/terminal/ui/: ExtraKeysBar.kt  SettingsScreen.kt  TabBar.kt  TerminalScreen.kt  TerminalSurface.kt  TerminalTextLayout.kt
app/src/main/java/com/tx/terminal/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/tx/terminal/util/: ClipboardUtil.kt  TerminalInputDelegate.kt  TextSelectionHelper.kt
app/src/main/java/com/tx/terminal/viewmodel/: SettingsViewModel.kt  TerminalViewModel.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: preferences.xml
